# ditto

./: .gitmodules  CMakeLists.txt  README.md  adb_bench.sh  adb_test.sh
include/stompbox/: BTrack.h  BeatTracker.h  MagicRingBuffer.h  MathNeon.h  MiscUtil.h  OnsetDetection.h  Precomputed.h  Window.h
src/: BTrackPrecomputed.h  BeatTracker.cpp  CircularBuffer.h  Ditto.h  MagicRingBuffer.cpp  MathNeon.cpp  MathNeon.h  MathNeonLog10.cpp  MirroredMemory.cpp  OnsetDetection.cpp  Stompbox.cpp  Stompbox.h
test/: Benchmarks.cpp  UnitTests.cpp  unit_test.cpp
